--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 851725588325.dkr.ecr.ap-south-1.amazonaws.com/my-springboot-app:latest
+        image: 851725588325.dkr.ecr.ap-south-1.amazonaws.com/nagp-repo:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
