--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -31,12 +31,14 @@ metadata:
     app: springboot-app
     k8s-app: springboot-app
   name: springboot-app
+  annotations:
+    alb.ingress.kubernetes.io/healthcheck-path: /index.html
 spec:
   ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 8085
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: springboot-app
